After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669040 - twitter: When verifying credentials, don't fetch the last status
twitter: When verifying credentials, don't fetch the last status
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: general
3.3.x
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-01-30 15:49 UTC by Ross Burton
Modified: 2013-03-12 14:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
twitter: don't set the method to GET, that's the default (948 bytes, patch)
2012-01-30 15:49 UTC, Ross Burton
committed Details | Review
twitter: When verifying credentials, don't fetch the last status (972 bytes, patch)
2012-01-30 15:49 UTC, Ross Burton
committed Details | Review

Description Ross Burton 2012-01-30 15:49:16 UTC
The Twitter API lets you specify that you don't care for the latest status
update, presumably for performance reasons.  Let's do that.
Comment 1 Ross Burton 2012-01-30 15:49:18 UTC
Created attachment 206446 [details] [review]
twitter: don't set the method to GET, that's the default
Comment 2 Ross Burton 2012-01-30 15:49:20 UTC
Created attachment 206447 [details] [review]
twitter: When verifying credentials, don't fetch the last status
Comment 3 Debarshi Ray 2013-03-12 14:29:54 UTC
Although I don't if we will ever use the Twitter provider (for instance, Twitter's guidelines are quite strict for 3rd party applications), but lets get these in any way.

Thanks for the patches!