twitter: Don't set the method to GET, that's the default

https://bugzilla.gnome.org/show_bug.cgi?id=669040