src/goabackend/goatwitterprovider.c
@@ -154,7 +154,6 @@ get_identity_sync (GoaOAuthProvider  *provider,
                                       "https://api.twitter.com/1/account/verify_credentials.json",
                                       FALSE);
   call = rest_proxy_new_call (proxy);
-  rest_proxy_call_set_method (call, "GET");
 
   if (!rest_proxy_call_sync (call, error))
     goto out;
